--- a/index.html
+++ b/index.html
@@ -659,6 +659,19 @@
                 gap: 10px !important;
             }
 
+            .impact-item {
+                padding: 15px !important;
+            }
+
+            .impact-item span {
+                font-size: 1.5rem !important;
+            }
+
+            .impact-item label {
+                font-size: 0.75rem !important;
+                line-height: 1.2;
+            }
+
             /* Tab 按钮自动换行 */
             .tab-container {
                 flex-wrap: wrap;
@@ -1048,19 +1061,19 @@
                     <div class="impact-grid">
                         <div class="impact-item">
                             <span>100%</span>
-                            <label>商机数字化覆盖</label>
+                            <label>数字化覆盖</label>
                         </div>
                         <div class="impact-item">
-                            <span>0 漏单</span>
+                            <span>0漏单</span>
                             <label>端到端管理闭环</label>
                         </div>
                         <div class="impact-item">
-                            <span>20% ↑</span>
-                            <label>全流程流转提速</label>
+                            <span>20%</span>
+                            <label>全流程提速</label>
                         </div>
                         <div class="impact-item">
                             <span>感谢信</span>
-                            <label>CMHK DT部高度认可</label>
+                            <label>DT部高度认可</label>
                         </div>
                     </div>
                     <div class="sub-section-title">核心业务逻辑解构</div>
@@ -1107,11 +1120,11 @@
 
                     <div class="impact-grid" style="margin-top: 30px;">
                         <div class="impact-item">
-                            <span>734人</span>
+                            <span>734</span>
                             <label>25年活跃用户</label>
                         </div>
                         <div class="impact-item">
-                            <span>3.9万+</span>
+                            <span>3.9w+</span>
                             <label>25年总点击量</label>
                         </div>
                         <div class="impact-item">
@@ -1120,7 +1133,7 @@
                         </div>
                         <div class="impact-item">
                             <span>12项</span>
-                            <label>关键事项自动提醒</label>
+                            <label>事项自动提醒</label>
                         </div>
                     </div>
 
@@ -1241,7 +1254,7 @@
                         </div>
                         <div class="impact-item">
                             <span>80%</span>
-                            <label>关键流程线上化</label>
+                            <label>流程线上化</label>
                         </div>
                         <div class="impact-item">
                             <span>3期</span>
